--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-page-control": "^1.1.1",
+    "react-native-refresh-list-view": "^1.0.10",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.8"
   },
